# study-pack-builder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: application-korean.md  english-academy-workflow.md  ocr-cleanup-workflow.md  printable-pdf-tables.md  review-sheet-templates.md  sample-output.md
examples/: concepts.txt  english_academy_lesson.txt  english_academy_ocr.txt  english_academy_vocab.csv  invalid_vocab.csv  vocab.csv
src/study_pack_builder/: __init__.py  cli.py  ocr.py  pdf_tables.py  pdf_tools.py  quiz.py  review_sheet.py  validate.py  vocab.py
tests/: conftest.py  test_cli.py  test_ocr.py  test_pdf_tables.py  test_quiz.py  test_review_sheet.py  test_validate.py  test_vocab.py
